@@ -1,7 +1,7 @@
 #!/bin/sh
 
 . /lib/partman/lib/base.sh
-. /lib/partman/recipes.sh
+. /lib/partman/lib/recipes.sh
 . /lib/partman/crypto_tools.sh
 
 # If there are no recipies that support LVM then don't offer auto-crypto
