@@ -9,5 +9,5 @@ Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/partman/partman-auto-crypto
 Package: partman-auto-crypto
 XC-Package-Type: udeb
 Architecture: all
-Depends: ${misc:Depends}, partman-auto (>= 55), partman-auto-lvm (>= 14), partman-crypto (>= 13), partman-base (>= 114)
+Depends: ${misc:Depends}, partman-auto (>= 73), partman-auto-lvm (>= 14), partman-crypto (>= 13), partman-base (>= 114)
 Description: Automatically partition storage devices using crypto and LVM
