@@ -1,7 +1,7 @@
 #!/bin/sh
 
 . /lib/partman/lib/base.sh
-. /lib/partman/auto-shared.sh
+. /lib/partman/lib/auto-shared.sh
 
 disk=$(select_auto_disk) || exit 99
 
