@@ -9,5 +9,5 @@ Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/partman/partman-auto-lvm
 Package: partman-auto-lvm
 XC-Package-Type: udeb
 Architecture: all
-Depends: ${misc:Depends}, partman-base (>= 114), partman-auto (>= 69), partman-lvm (>= 36), di-utils (>= 1.15), lvm2-udeb
+Depends: ${misc:Depends}, partman-base (>= 114), partman-auto (>= 73), partman-lvm (>= 36), di-utils (>= 1.15), lvm2-udeb
 Description: Automatically partition storage devices using LVM
