@@ -1,7 +1,7 @@
 #!/bin/sh
 
 . /lib/partman/lib/base.sh
-. /lib/partman/recipes.sh
+. /lib/partman/lib/recipes.sh
 . /lib/partman/lvm_tools.sh
 
 VG_name=$1
