@@ -1,7 +1,7 @@
 #!/bin/sh
 
 . /lib/partman/lib/base.sh
-. /lib/partman/auto-shared.sh
+. /lib/partman/lib/auto-shared.sh
 
 DEVS="$(get_auto_disks)"
 [ "$DEVS" ] || exit 0
