@@ -1,8 +1,8 @@
 #!/bin/sh
 
 . /lib/partman/lib/base.sh
-. /lib/partman/recipes.sh
-. /lib/partman/auto-shared.sh
+. /lib/partman/lib/recipes.sh
+. /lib/partman/lib/auto-shared.sh
 
 dev=$1
 cd $dev
