@@ -2,7 +2,7 @@
 
 . /usr/share/debconf/confmodule
 . /lib/partman/lib/base.sh
-. /lib/partman/auto-shared.sh
+. /lib/partman/lib/auto-shared.sh
 
 # Skip if no disks detected and don't run on S/390
 if [ -z "$(get_auto_disks)" ] || \
