@@ -7,7 +7,7 @@ if [ -f /var/lib/partman/initial_auto ]; then
 	exit 0
 fi
 
-. /lib/partman/auto-shared.sh
+. /lib/partman/lib/auto-shared.sh
 
 dev_to_partman () {
 	local dev_name="$1"
