@@ -1,8 +1,9 @@
 partman-auto (73) UNRELEASED; urgency=low
 
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
+  * Move recipes.sh and auto-shared.sh to ./lib/.
 
- -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 14:15:10 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 15:07:34 +0100
 
 partman-auto (72) unstable; urgency=low
 
