@@ -3,8 +3,10 @@ partman-auto-crypto (6) UNRELEASED; urgency=low
   * Move deletion of SVN directories to install-rc script.
   * Improve the way install-rc is called.
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
+  * Moved recipes.sh and auto-shared.sh (partman-auto) to ./lib/.
+    Requires partman-auto (>= 73).
 
- -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 14:15:10 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 15:01:50 +0100
 
 partman-auto-crypto (5) unstable; urgency=low
 
